// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput Select matches snapshot 1`] = `
<DocumentFragment>
  <select
    id="id"
    name="name"
  >
    <option
      value="value 1"
    >
      value 1
    </option>
    <option
      value="value 2"
    >
      value 2
    </option>
    <option
      value="value 3"
    >
      value 3
    </option>
  </select>
</DocumentFragment>
`;

exports[`FormInput TextArea matches snapshot 1`] = `
<DocumentFragment>
  <textarea
    id="id"
    name="name"
    placeholder="placeholder"
    rows="10"
  />
</DocumentFragment>
`;

exports[`FormInput TextField matches snapshot 1`] = `
<DocumentFragment>
  <input
    id="id"
    name="name"
    placeholder="placeholder"
    type="text"
  />
</DocumentFragment>
`;
